# github_cicd

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml
github_cicd/: main.py  requirements-dev.txt
github_cicd/.github/workflows/: ci.yaml  hello-world.yaml  workflowsci.yaml
tests/: test_main.py
