[project]
name = "github-cicd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.8"
dependencies = [
    "flask==2.3.3",
    "python-dotenv==1.0.1",
    "requests==2.31.0",
    "responses>=0.25.7",
]

[dependency-groups]
dev = [
    "pylint==2.17.5",
    "pytest==7.4.2",
    "pytest-cov==4.1.0",
    "ruff==0.1.6",
]
